Fixed a typo in the rulebook

--- a/naughty_or_nice_pages.tex
+++ b/naughty_or_nice_pages.tex
@@ -137,7 +137,7 @@ Naughty or Nice is a find-the-match game for two players. It can be played in ab
 
 \section*{Set Up}
 \begin{enumerate}[leftmargin=*]
-  \item Prepage three decks of cards. Each deck will consist of all of the cards of a given type.
+  \item Prepare three decks of cards. Each deck will consist of all of the cards of a given type.
   \begin{itemize}[leftmargin=*]
   	\item Shuffle the target cards together to create the \emph{target deck}.
   	\item Shuffle the character cards together to create the \emph{character deck}.
